# event-photo-finder

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: drive_client.py  face_engine.py  indexer.py  main.py  requirements.txt
deploy/: reindex.service  reindex.timer  setup-ec2.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: CameraCapture.jsx  Header.jsx  Loader.jsx  PhotoCard.jsx  Results.jsx  SettingsPanel.jsx  UploadCard.jsx
